crates/sql-orm/tests/ui/from_row_unsupported_attr.rs
use sql_orm::prelude::*;

#[derive(FromRow)]
struct Projection {
    #[orm(length = 120)]
    name: String,
}

fn main() {}
